Make `ICalService.eventsFromCalendarStream` consume `InputStream` by `URL`